--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>cursomc</name>
+	<name>cursomc2</name>
 	<description>Curso Spring Boot Professor Nelio Alves</description>
 
 	<parent>
